--- a/NJLBasicW.lpi
+++ b/NJLBasicW.lpi
@@ -118,6 +118,14 @@
         <Filename Value="src\ubasicgraphic.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="src\uhelp.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="bin\NJLBasic.fr.txt"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
